Сделаны сетки страниц на флексах

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,17 +18,37 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  margin: 0;
+
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+
   color: #000000;
   background-color: #ffffff;
 }
 
 .main-index {
   text-align: center;
+}
+
+/* КОНТЕЙНЕРЫ */
+.main-container {
+  flex-grow: 1;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
 }
 
 /* СКРЫТЫЕ ЭЛЕМЕНТЫ */
@@ -72,14 +92,20 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
-  color: #ffffff;
   text-transform: uppercase;
+
+  color: #ffffff;
   background-color: #82B3D3;
 }
 
 .reset {
   font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
   border: none;
+
+  color: #ffffff;
+  background-color: transparent;
 }
 
 .add {
@@ -94,10 +120,11 @@ body {
 /* КНОПКИ-ССЫЛКИ */
 .button-link {
   font-weight: 700;
-  color:#ffffff;
-  background-color: #756157;
   text-transform: uppercase;
   text-decoration: none;
+
+  color:#ffffff;
+  background-color: #756157;
 }
 
 .here {
@@ -111,24 +138,48 @@ body {
 }
 
 /* СЕЛЕКТЫ */
-.label-amount, .select-control-amount, .select-control-sorting {
+.label-amount, .select-control-amount, .hotel-sorting-select {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+
   color: #333333;
 }
 
 /* МЕНЮ НАВИГАЦИИ */
 .navigation {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+
   font-weight: 700;
   text-transform: capitalize;
 }
 
+.navigation-logo {
+  margin-left: 70px;
+}
+
+.navigation-list {
+  display: flex;
+  width: 450px;
+  margin-left: 30px;
+  padding: 0;
+  list-style: none;
+}
+
+.navigation-item {
+  margin-right: 34px;
+}
+
 .navigation-link {
+  margin: 0;
+  padding: 0;
   font-size: 20px;
   line-height: 26px;
-  color: #000000;
   text-decoration: none;
+
+  color: #000000;
 }
 
 .current-site-page {
@@ -136,19 +187,33 @@ body {
 }
 
 /* МЕНЮ ПОЛЬЗОВАТЕЛЯ */
+
+.user-list {
+  display: flex;
+  width: 300px;
+  margin-left: auto;
+  padding: 0;
+  list-style: none;
+}
+
 .user-link {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
+
   color: #ffffff;
 }
 
 /* БЛОК ПРОМО */
 .promo {
+  margin: 0 auto;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  color: #000000;
   text-transform: uppercase;
+
+  color: #000000;
 }
 
 .promo-image {
@@ -157,20 +222,61 @@ body {
 }
 
 /* БЛОК ПРЕИМУЩЕСТВ */
+.advantages {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+}
+
 .advantages-main-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+
+  list-style: none;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
 }
 
 .advantages-sub-list {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+
   color: #000000;
   background-color: #ffffff;
 }
 
+.advantages-sub-item {
+  width: 400px;
+}
+
+.advantages-main-item {
+  width: 400px;
+}
+
 .blue-block {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+
   color: #ffffff;
   background-color: #82B3D3;
+}
+
+.blue-block-main {
+  display: flex;
+}
+
+.blue-block-image-start {
+  order: -1;
 }
 
 .white-blue-block {
@@ -179,6 +285,11 @@ body {
 
 .grey-blue-block {
   background-color: rgba(131, 179, 211, 0.2);
+}
+
+/* БЛОК ПОИСКА ГОСТИННИЦ */
+.hotel-search {
+  display: block;
 }
 
 /* БЛОК ПОДПИСКИ */
@@ -196,20 +307,43 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+
   background-color: #F2F2F2;
+}
+
+/* ХЕДЕР КАТАЛОГА */
+.header-container {
+  margin-left: 70px;
 }
 
 /* ХЛЕБНЫЕ КРОШКИ */
 .breadcrumps {
+  display: flex;
   font-size: 16px;
+  list-style: none;
 }
 
 /* ФИЛЬТРАЦИЯ КАТАЛОГА ГОСТИНИЦ */
 .head-inner-container {
-  color: #ffffff;
+  display: flex;
+  flex-direction: column;
   text-transform: capitalize;
+
+  color: #ffffff;
   background: #82B3D3 url("../images/background-catalog.jpeg") no-repeat;
   background-size: 100% auto;
+}
+
+.catalog-filter {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: space-around;
+}
+
+.catalog-filter-group {
+  border: none;
 }
 
 .catalog-filter-title {
@@ -224,13 +358,63 @@ body {
   line-height: 21px;
 }
 
+.filter-left {
+  display: flex;
+}
+
+.filter-right {
+  display: flex;
+}
+
+.group-buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.group-infrastructure {
+  width: 160px;
+  margin-right: 70px;
+}
+
+.group-type-house {
+  width: 180px;
+}
+
+.group-price {
+  width: 300px;
+  margin-right: 70px;
+}
+
+.group-buttons {
+  width: 170px;
+}
+
 /* СОРТИРОВКА КАТАЛОГА ГОСТИНИЦ */
+.hotel-sorting {
+  display: flex;
+  margin: o auto;
+  padding: 0;
+}
+
+.hotel-sorting-result {
+  margin-right: 191px;
+}
+
+.hotel-sorting-select {
+  margin-right: 78px;
+}
+
 .search-result {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+
   color: #000000;
+}
+
+.view-control-list {
+  list-style: none;
 }
 
 /* КАТАЛОГ ГОСТИНИЦ */
@@ -239,9 +423,43 @@ body {
   text-align: center;
 }
 
+.hotel-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+}
+
+.hotel-card {
+  width: 340px;
+  margin-right: 18px;
+}
+
+.hotel-card:first-child, .hotel-card:last-child {
+  margin-left: 73px;
+}
+
 /* ПАГИНАЦИЯ */
+.pagination-amount-container {
+  display: flex;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.pagination {
+  display: flex;
+  list-style: none;
+}
+
 .pagination-item {
+  width: 60px;
+  height: 60px;
+  margin-right: 8px;
   text-align: center;
+  border-radius: 4px;
+
   background-color: #82B3D3;
 }
 
@@ -249,6 +467,7 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
+
   color: #ffffff;
 }
 
@@ -257,12 +476,39 @@ body {
 }
 
 /* ПОДВАЛ */
+.page-footer-container {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-social {
+  width: 142px;
+  margin-right: 42px;
+}
+
+.footer-phone {
+  width: 720px;
+  margin: auto;
+  text-align: center;
+}
+
+.footer-htmlacademy-logo {
+  width: 115px;
+}
+
+.social-list {
+  display: flex;
+  list-style: none;
+}
+
 .phone {
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
-  color: #000000;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
+
+  color: #000000;
 }
