--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 /* ШРИФТЫ */
 
 /* PT Sans */
@@ -123,7 +122,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
 
-  color:#ffffff;
+  color: #ffffff;
   background-color: #756157;
 }
 
@@ -138,7 +137,9 @@ body {
 }
 
 /* СЕЛЕКТЫ */
-.label-amount, .select-control-amount, .hotel-sorting-select {
+.label-amount,
+.select-control-amount,
+.hotel-sorting-select {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
@@ -436,7 +437,8 @@ body {
   margin-right: 18px;
 }
 
-.hotel-card:first-child, .hotel-card:last-child {
+.hotel-card:first-child,
+.hotel-card:last-child {
   margin-left: 73px;
 }
 
