--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,9 +41,6 @@ body {
 }
 
 /* КОНТЕЙНЕРЫ */
-.main-container {
-  flex-grow: 1;
-}
 
 .page-container {
   width: 1200px;
@@ -118,6 +115,10 @@ body {
 
 /* КНОПКИ-ССЫЛКИ */
 .button-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
@@ -129,6 +130,8 @@ body {
 .here {
   font-size: 16px;
   line-height: 20px;
+
+  outline: red 2px solid;
 }
 
 .search {
@@ -153,34 +156,38 @@ body {
   width: 1200px;
   margin: 0 auto;
 
-  font-weight: 700;
-  text-transform: capitalize;
+  outline: orange 2px solid;
 }
 
 .navigation-logo {
   margin-left: 70px;
+  margin-right: 30px;
 }
 
 .navigation-list {
   display: flex;
+  flex-wrap: wrap;
   width: 450px;
-  margin-left: 30px;
+  margin: 0;
   padding: 0;
-  list-style: none;
-}
 
-.navigation-item {
-  margin-right: 34px;
+  list-style-type: none;
 }
 
 .navigation-link {
-  margin: 0;
-  padding: 0;
+  display: block;
+  margin-right: 34px;
+  padding: 20px 0;
+
+
+  font-weight: 700;
   font-size: 20px;
   line-height: 26px;
+  text-transform: capitalize;
   text-decoration: none;
 
   color: #000000;
+  outline: red 2px solid;
 }
 
 .current-site-page {
@@ -191,35 +198,57 @@ body {
 
 .user-list {
   display: flex;
-  width: 300px;
+  flex-wrap: wrap;
+  max-width: 300px;
   margin-left: auto;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .user-link {
-  margin: 0;
+  display: block;
+  margin: 0 auto;
+  margin-right: 20px;
   padding: 0;
+  min-width: 20px;
+  min-height: 20px;
+
   font-size: 16px;
   line-height: 20px;
 
   color: #ffffff;
+  outline: red 1px solid;
 }
 
 /* БЛОК ПРОМО */
 .promo {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
 
   color: #000000;
+  /* outline: orange 2px solid; */
 }
 
-.promo-image {
+.promo-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 63px;
+  width: 1200px;
+  height: 485px;
   background: #82B3D3 url("../images/background-promo.jpeg") no-repeat;
   background-size: 100% auto;
+}
+
+.promo-text {
+  margin: 0;
+  margin-bottom: 31px;
+  padding: 0;
 }
 
 /* БЛОК ПРЕИМУЩЕСТВ */
@@ -227,7 +256,15 @@ body {
   display: flex;
   flex-direction: column;
   width: 1200px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+
+  /* outline: orange 2px solid; */
+}
+
+.advantages-text {
+  margin: 0;
+  margin-bottom: 90px;
   padding: 0;
 }
 
@@ -238,7 +275,7 @@ body {
   margin: 0 auto;
   padding: 0;
 
-  list-style: none;
+  list-style-type: none;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
@@ -249,7 +286,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 
   color: #000000;
   background-color: #ffffff;
@@ -321,7 +358,7 @@ body {
 .breadcrumps {
   display: flex;
   font-size: 16px;
-  list-style: none;
+  list-style-type: none;
 }
 
 /* ФИЛЬТРАЦИЯ КАТАЛОГА ГОСТИНИЦ */
@@ -415,7 +452,7 @@ body {
 }
 
 .view-control-list {
-  list-style: none;
+  list-style-type: none;
 }
 
 /* КАТАЛОГ ГОСТИНИЦ */
@@ -429,7 +466,7 @@ body {
   flex-wrap: wrap;
   margin: 0 auto;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .hotel-card {
@@ -452,7 +489,7 @@ body {
 
 .pagination {
   display: flex;
-  list-style: none;
+  list-style-type: none;
 }
 
 .pagination-item {
@@ -501,7 +538,7 @@ body {
 
 .social-list {
   display: flex;
-  list-style: none;
+  list-style-type: none;
 }
 
 .phone {
