--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,8 @@ body {
 
 /* ЗАГАЛОВКИ */
 .heading {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -118,6 +120,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0;
+  padding: 0;
 
   font-weight: 700;
   text-transform: uppercase;
@@ -128,15 +132,26 @@ body {
 }
 
 .here {
+  display: block;
+  width: 160px;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 9px 15px 8px 15px;
+  margin: 0;
+  margin-right: 70px;
+  border-radius: 4px;
+
   font-size: 16px;
   line-height: 20px;
-
-  outline: red 2px solid;
 }
 
 .search {
+  display: block;
+  width: 544px;
   font-size: 20px;
   line-height: 36px;
+  padding: 12px 15px;
+  margin: 0;
 }
 
 /* СЕЛЕКТЫ */
@@ -155,11 +170,11 @@ body {
   display: flex;
   width: 1200px;
   margin: 0 auto;
-
-  outline: orange 2px solid;
 }
 
 .navigation-logo {
+  display: block;
+  max-width: 100%;
   margin-left: 70px;
   margin-right: 30px;
 }
@@ -167,6 +182,7 @@ body {
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   width: 450px;
   margin: 0;
   padding: 0;
@@ -176,8 +192,7 @@ body {
 
 .navigation-link {
   display: block;
-  margin-right: 34px;
-  padding: 20px 0;
+  padding: 20px 17px;
 
 
   font-weight: 700;
@@ -187,7 +202,10 @@ body {
   text-decoration: none;
 
   color: #000000;
-  outline: red 2px solid;
+}
+
+.navigation-link:nth-child(4n) {
+  margin-right: 0;
 }
 
 .current-site-page {
@@ -199,9 +217,12 @@ body {
 .user-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 300px;
+  align-items: center;
+  max-width: 350px;
+  margin: 0;
   margin-left: auto;
   padding: 0;
+
   list-style-type: none;
 }
 
@@ -210,14 +231,14 @@ body {
   margin: 0 auto;
   margin-right: 20px;
   padding: 0;
-  min-width: 20px;
-  min-height: 20px;
+  min-width: 36px;
+  min-height: 36px;
 
   font-size: 16px;
   line-height: 20px;
 
   color: #ffffff;
-  outline: red 1px solid;
+  outline: #000000 1px solid;
 }
 
 /* БЛОК ПРОМО */
@@ -240,7 +261,7 @@ body {
   align-items: center;
   margin-bottom: 63px;
   width: 1200px;
-  height: 485px;
+  min-height: 485px;
   background: #82B3D3 url("../images/background-promo.jpeg") no-repeat;
   background-size: 100% auto;
 }
@@ -258,20 +279,12 @@ body {
   width: 1200px;
   margin: 0;
   padding: 0;
-
-  /* outline: orange 2px solid; */
-}
-
-.advantages-text {
-  margin: 0;
-  margin-bottom: 90px;
-  padding: 0;
 }
 
 .advantages-main-list {
   display: flex;
-  flex-wrap: wrap;
   width: 1200px;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding: 0;
 
@@ -284,25 +297,26 @@ body {
 .advantages-sub-list {
   display: flex;
   width: 1200px;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding: 0;
+
   list-style-type: none;
 
   color: #000000;
   background-color: #ffffff;
 }
 
+.advantages-main-item,
 .advantages-sub-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 400px;
-}
-
-.advantages-main-item {
-  width: 400px;
+  min-height: 384px;
 }
 
 .blue-block {
-  display: flex;
-  flex-direction: column;
   width: 1200px;
 
   color: #ffffff;
@@ -311,6 +325,33 @@ body {
 
 .blue-block-main {
   display: flex;
+}
+
+.advantages-text {
+  margin: 0;
+  margin-bottom: 90px;
+  padding: 0;
+}
+
+.blue-block-text {
+  align-self: center;
+}
+
+.advantages h3,
+.advantages h4 {
+  margin-bottom: 30px;
+  padding: 0 85px;
+}
+
+.advantages-number {
+  margin: 0;
+  margin-bottom: 30px;
+  padding: 0 85px;
+}
+
+.advantages-description {
+  margin: 0;
+  padding: 0 85px;
 }
 
 .blue-block-image-start {
@@ -327,11 +368,27 @@ body {
 
 /* БЛОК ПОИСКА ГОСТИННИЦ */
 .hotel-search {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 417px;
+}
+
+.hotel-search-text {
+  margin: 0;
+  margin-bottom: 56px;
+  padding: 0;
 }
 
 /* БЛОК ПОДПИСКИ */
 .subscription {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 411px;
+
   text-align: center;
 }
 
